# electricity_demannd_de

./: .gitignore  PROJECT_CONTEXT.md  README.md  main.py  pyproject.toml  requirements_gpu.txt  uv_error.txt
notebook/: 01_eda_energy.ipynb  02_eda_weather.ipynb  03_eda_energy_weather.ipynb  04_base_models_eval.ipynb  05_feature_importances.ipynb  06_scrape_smard.ipynb  07_complete_ml_pipeline.ipynb  07_interactive_prediction.ipynb  08_interactive_prediction.ipynb  eda_energy.ipynb  eda_energy_weather.ipynb
notebook_edit/: 01_eda_energy.ipynb  02_eda_weather.ipynb  03_eda_energy_weather.ipynb  04_base_models_eval.ipynb
presentation/: Stromverbrauch_Vorhersagen.odp
src/: fetch_prepare_data.py  load_energy_data.py  main.py  streamlit_app.py  train_model_predict.py
